FIX: Responses text not showing correctly

--- a/client/src/components/ListaConversaciones/ListaConversaciones.css
+++ b/client/src/components/ListaConversaciones/ListaConversaciones.css
@@ -5,6 +5,7 @@
 
 p {
     color: black;
+    font-size: 20px;
 }
 
 .title h2 {
